--- a/doctype.html
+++ b/doctype.html
@@ -38,7 +38,7 @@
     <div class="overlay"></div>
     <div class="content">
       <div class="hero">
-        <div class="avatar" id="avatar" style="background-image:url('https://resimlink.com/mat1j')"></div>
+        <div class="avatar" id="avatar" style="background-image:url('assets/ahmet.png')"></div>
         <div>
           <h1 class="title" id="name">Ahmet Tanriverdi</h1>
           <div class="sub" id="desc">Web geliştiricisi | Teknoloji meraklısı | Müzik tutkunu</div>
@@ -55,10 +55,10 @@
         <a class="link" href="mailto:mail@example.com">İletişim</a>
       </div>
       <div style="padding:18px;text-align:center">
-        <div class="small">© 2025 — Kişisel bio sayfa</div>
+        <div class="small">© 2025 — Ahmet Tanriverdi</div>
       </div>
-      <!-- Audio element: şarkı eklenecek -->
-      <audio id="player" src="" preload="none"></audio>
+      <!-- Audio element: Amo aller Amos müziği eklenecek -->
+      <audio id="player" src="assets/amo-aller-amos.mp3" preload="none"></audio>
     </div>
   </div>
   <script>
