--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
 .link{display:block;text-decoration:none;padding:14px 16px;border-radius:12px;margin:8px 0;background:var(--card);color:#fff;font-weight:600;transition:transform 0.2s, background 0.2s}
 .link:hover{transform:scale(1.03);background:rgba(255,255,255,0.1)}
 .small{font-size:13px;color:rgba(255,255,255,0.65)}
-.bg-img{position:absolute;inset:0;background-size:cover;background-position:center;filter:blur(8px) brightness(0.45);transform:scale(1.05);z-index:0;animation:moveBG 20s linear infinite}
+.bg-img{
+  position: fixed; /* tüm sayfa arka planı */
+  inset:0;
+  background-size: cover;
+  background-position: center;
+  z-index:0;
+  animation:moveBG 20s linear infinite;
+}
 .overlay{position:absolute;inset:0;background:linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.15));z-index:1}
 .content{position:relative;z-index:2}
 @keyframes moveBG{0%{transform:scale(1) translateX(0)}50%{transform:scale(1.05) translateX(-10px)}100%{transform:scale(1) translateX(0)}}
@@ -79,7 +86,8 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
 </head>
 <body>
 <div class="wrap">
-  <div id="bg" class="bg-img" style="background-image: url('https://images.unsplash.com/photo-1505740420928-5e560c06d30e?auto=format&fit=crop&w=1400&q=80')"></div>
+  <!-- Arka plan -->
+  <div id="bg" class="bg-img" style="background-image:url('assets/ahmet2.png')"></div>
   <div class="overlay"></div>
   <div class="content">
     <div class="hero">
