--- a/index.html
+++ b/index.html
@@ -24,17 +24,22 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
 .link{display:block;text-decoration:none;padding:14px 16px;border-radius:12px;margin:8px 0;background:var(--card);color:#fff;font-weight:600;transition:transform 0.2s, background 0.2s}
 .link:hover{transform:scale(1.03);background:rgba(255,255,255,0.1)}
 .small{font-size:13px;color:rgba(255,255,255,0.65)}
+
+/* Arka plan resmi sabit ve tam ekran */
 .bg-img{
-  position: fixed; /* tüm sayfa arka planı */
+  position: fixed;
   inset:0;
+  width: 100%;
+  height: 100%;
   background-size: cover;
   background-position: center;
   z-index:0;
-  animation:moveBG 20s linear infinite;
 }
+
+/* Overlay üstte */
 .overlay{position:absolute;inset:0;background:linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.15));z-index:1}
 .content{position:relative;z-index:2}
-@keyframes moveBG{0%{transform:scale(1) translateX(0)}50%{transform:scale(1.05) translateX(-10px)}100%{transform:scale(1) translateX(0)}}
+
 @media (max-width:420px){.hero{grid-template-columns:72px 1fr}.avatar{width:72px;height:72px}}
 
 #audioControl {
