--- a/index.html
+++ b/index.html
@@ -7,25 +7,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 <style>
 :root{--bg:#0b0b0b;--card:rgba(255,255,255,0.06);--accent:#ff4757}
-*{box-sizing:border-box;transition:all 0.3s ease}
+*{box-sizing:border-box}
 html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;overflow-x:hidden}
 body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-content:center;padding:24px}
 
-.wrap{width:100%;max-width:760px;border-radius:18px;overflow:hidden;position:relative;background:linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.02));box-shadow:0 6px 30px rgba(0,0,0,0.6);animation:fadeIn 1.2s ease}
-@keyframes fadeIn{0%{opacity:0;transform:translateY(20px)}100%{opacity:1;transform:translateY(0)}}
-.hero{position:relative;padding:28px 22px 18px 22px;display:grid;grid-template-columns:96px 1fr;gap:18px;align-items:center}
-.avatar{width:96px;height:96px;border-radius:50%;background-size:cover;background-position:center;border:3px solid rgba(255,255,255,0.06);transform:scale(0);animation:avatarPop 0.8s forwards}
-@keyframes avatarPop{to{transform:scale(1)}}
-.title{font-weight:800;font-size:22px;margin:0;opacity:0;animation:fadeUp 1s 0.5s forwards}
-.sub{font-size:14px;color:rgba(255,255,255,0.7);margin-top:6px;opacity:0;animation:fadeUp 1s 0.7s forwards}
-@keyframes fadeUp{to{opacity:1;transform:translateY(0)}}
-.controls{display:flex;flex-direction:column;gap:6px;align-items:flex-start;margin-top:10px;opacity:0;animation:fadeUp 1s 0.9s forwards}
-.links{display:flex;flex-direction:column;padding:18px;border-top:1px solid rgba(255,255,255,0.03);animation:fadeUp 1s 1.1s forwards}
-.link{display:block;text-decoration:none;padding:14px 16px;border-radius:12px;margin:8px 0;background:var(--card);color:#fff;font-weight:600;transition:transform 0.2s, background 0.2s}
-.link:hover{transform:scale(1.03);background:rgba(255,255,255,0.1)}
-.small{font-size:13px;color:rgba(255,255,255,0.65)}
-
-/* Arka plan resmi sabit ve tam ekran */
+/* Arka plan resmi hemen tam ekran */
 .bg-img{
   position: fixed;
   inset:0;
@@ -36,41 +22,7 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
   z-index:0;
 }
 
-/* Overlay üstte */
-.overlay{position:absolute;inset:0;background:linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.15));z-index:1}
-.content{position:relative;z-index:2}
-
-@media (max-width:420px){.hero{grid-template-columns:72px 1fr}.avatar{width:72px;height:72px}}
-
-#audioControl {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  background: rgba(0,0,0,0.4);
-  padding: 6px 10px;
-  border-radius: 12px;
-  cursor: pointer;
-  z-index:10;
-}
-
-#volumeSlider {
-  width: 0px;
-  transition: width 0.3s ease;
-}
-
-#audioControl:hover #volumeSlider {
-  width: 100px;
-}
-
-#volumeIcon {
-  width: 24px;
-  height: 24px;
-}
-
-/* Blur overlay başlangıçta açık */
+/* Blur overlay */
 #blurOverlay {
   position: fixed;
   inset:0;
@@ -87,38 +39,73 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
   text-align:center;
   transition: opacity 1.5s ease;
 }
+
+/* İçerik */
+.wrap{width:100%;max-width:760px;border-radius:18px;overflow:hidden;position:relative;background:linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.02));box-shadow:0 6px 30px rgba(0,0,0,0.6);}
+.hero{position:relative;padding:28px 22px 18px 22px;display:grid;grid-template-columns:96px 1fr;gap:18px;align-items:center;animation:fadeUp 1s ease forwards;opacity:0;transform:translateY(20px);}
+@keyframes fadeUp{to{opacity:1;transform:translateY(0)}}
+.avatar{width:96px;height:96px;border-radius:50%;background-size:cover;background-position:center;border:3px solid rgba(255,255,255,0.06);}
+.title{font-weight:800;font-size:22px;margin:0}
+.sub{font-size:14px;color:rgba(255,255,255,0.7);margin-top:6px}
+.controls{display:flex;flex-direction:column;gap:6px;align-items:flex-start;margin-top:10px}
+.links{display:flex;flex-direction:column;padding:18px;border-top:1px solid rgba(255,255,255,0.03)}
+.link{display:block;text-decoration:none;padding:14px 16px;border-radius:12px;margin:8px 0;background:var(--card);color:#fff;font-weight:600;transition:transform 0.2s, background 0.2s}
+.link:hover{transform:scale(1.03);background:rgba(255,255,255,0.1)}
+.small{font-size:13px;color:rgba(255,255,255,0.65)}
+
+@media (max-width:420px){.hero{grid-template-columns:72px 1fr}.avatar{width:72px;height:72px}}
+
+/* Ses kontrol */
+#audioControl {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  background: rgba(0,0,0,0.4);
+  padding: 6px 10px;
+  border-radius: 12px;
+  cursor: pointer;
+  z-index:10;
+}
+#volumeSlider {width:0; transition: width 0.3s ease;}
+#audioControl:hover #volumeSlider {width:100px;}
+#volumeIcon {width:24px;height:24px;}
 </style>
 </head>
 <body>
+<!-- Arka plan -->
+<div id="bg" class="bg-img" style="background-image:url('assets/ahmet2.png')"></div>
+
+<!-- Blur overlay -->
+<div id="blurOverlay">Ekrana tıkla, Paşam</div>
+
 <div class="wrap">
-  <!-- Arka plan -->
-  <div id="bg" class="bg-img" style="background-image:url('assets/ahmet2.png')"></div>
-  <div class="overlay"></div>
-  <div class="content">
-    <div class="hero">
-      <div class="avatar" id="avatar" style="background-image:url('assets/ahmet.png')"></div>
-      <div>
-        <h1 class="title" id="name">Ahmet Tanriverdi</h1>
-        <div class="sub" id="desc">
-          LOL: 102 saat / Roblox: 207 saat / Counter: 267 saat
-        </div>
-        <div class="controls">
-          <span class="small">Ben olabilirmisin, Mari??</span>
-        </div>
+  <div class="hero">
+    <div class="avatar" id="avatar" style="background-image:url('assets/ahmet.png')"></div>
+    <div>
+      <h1 class="title" id="name">Ahmet Tanriverdi</h1>
+      <div class="sub" id="desc">
+        LOL: 102 saat / Roblox: 207 saat / Counter: 267 saat
+      </div>
+      <div class="controls">
+        <span class="small">Ben olabilirmisin Mari??</span>
       </div>
     </div>
-    <div class="links" id="links">
-      <a class="link" href="https://open.spotify.com/" target="_blank">Spotify</a>
-      <a class="link" href="https://youtube.com/" target="_blank">YouTube</a>
-      <a class="link" href="https://soundcloud.com/" target="_blank">SoundCloud</a>
-      <a class="link" href="mailto:mail@example.com">İletişim</a>
-    </div>
-    <div style="padding:18px;text-align:center">
-      <div class="small">© 2025 — Ahmet Tanriverdi</div>
-    </div>
-    <!-- Müzik -->
-    <audio id="player" src="assets/amo-aller-amos.mp3" preload="auto" loop></audio>
   </div>
+  <div class="links" id="links">
+    <a class="link" href="https://open.spotify.com/" target="_blank">Spotify</a>
+    <a class="link" href="https://youtube.com/" target="_blank">YouTube</a>
+    <a class="link" href="https://soundcloud.com/" target="_blank">SoundCloud</a>
+    <a class="link" href="mailto:mail@example.com">İletişim</a>
+  </div>
+  <div style="padding:18px;text-align:center">
+    <div class="small">© 2025 — Ahmet Tanriverdi</div>
+  </div>
+
+  <!-- Müzik -->
+  <audio id="player" src="assets/amo-aller-amos.mp3" preload="auto" loop></audio>
 </div>
 
 <!-- Ses kontrol -->
@@ -127,39 +114,27 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
   <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="1">
 </div>
 
-<!-- Blur overlay -->
-<div id="blurOverlay">Ekrana tıkla, Paşam</div>
-
 <script>
 const player = document.getElementById('player');
 const volumeSlider = document.getElementById('volumeSlider');
 const blurOverlay = document.getElementById('blurOverlay');
 
 // Ses slider
-volumeSlider.addEventListener('input', () => {
-  player.volume = volumeSlider.value;
-});
+volumeSlider.addEventListener('input', () => { player.volume = volumeSlider.value; });
 
 // Blur overlay tıklama
 blurOverlay.addEventListener('click', () => {
-  blurOverlay.style.opacity = '0'; // blur fade-out
-  setTimeout(() => {
-    blurOverlay.style.display = 'none';
-  }, 1500);
+  blurOverlay.style.opacity='0';
+  setTimeout(()=>{blurOverlay.style.display='none';},1500);
 
   // Müzik fade-in
   player.volume = 0;
   player.play();
   let vol = 0;
-  const fadeInterval = setInterval(() => {
-    if(vol < 1){
-      vol += 0.02;
-      if(vol > 1) vol = 1;
-      player.volume = vol;
-    } else {
-      clearInterval(fadeInterval);
-    }
-  }, 30);
+  const fadeInterval = setInterval(()=>{
+    if(vol<1){ vol+=0.02; if(vol>1) vol=1; player.volume=vol; } 
+    else { clearInterval(fadeInterval); }
+  },30);
 });
 </script>
 </body>
