--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;overflow-x:hidden}
 body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-content:center;padding:24px}
 
-/* Arka plan resmi hemen tam ekran */
+/* Arka plan resmi tam ekran ve hareketli */
 .bg-img{
   position: fixed;
   inset:0;
@@ -20,6 +20,12 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
   background-size: cover;
   background-position: center;
   z-index:0;
+  animation:moveBG 20s linear infinite;
+}
+@keyframes moveBG{
+  0%{transform:scale(1) translateX(0)}
+  50%{transform:scale(1.05) translateX(-10px)}
+  100%{transform:scale(1) translateX(0)}
 }
 
 /* Blur overlay */
@@ -90,7 +96,7 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
         LOL: 102 saat / Roblox: 207 saat / Counter: 267 saat
       </div>
       <div class="controls">
-        <span class="small">Ben olabilirmisin Mari??</span>
+        <span class="small">Ben olabilirmisin, Mari??</span>
       </div>
     </div>
   </div>
