--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
   background-size: cover;
   background-position: center;
   z-index:0;
-  animation:moveBG 20s linear infinite;
+  animation:moveBG 20s ease-in-out infinite;
 }
 @keyframes moveBG{
-  0%{transform:scale(1) translateX(0)}
-  50%{transform:scale(1.05) translateX(-10px)}
-  100%{transform:scale(1) translateX(0)}
+  0%{transform:scale(1.05) translate(0, 0)}
+  25%{transform:scale(1.05) translate(-20px, 15px)}
+  50%{transform:scale(1.05) translate(20px, -10px)}
+  75%{transform:scale(1.05) translate(-15px, -20px)}
+  100%{transform:scale(1.05) translate(0, 0)}
 }
 
 /* Blur overlay */
@@ -55,8 +57,9 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
 .sub{font-size:14px;color:rgba(255,255,255,0.7);margin-top:6px}
 .controls{display:flex;flex-direction:column;gap:6px;align-items:flex-start;margin-top:10px}
 .links{display:flex;flex-direction:column;padding:18px;border-top:1px solid rgba(255,255,255,0.03)}
-.link{display:block;text-decoration:none;padding:14px 16px;border-radius:12px;margin:8px 0;background:var(--card);color:#fff;font-weight:600;transition:transform 0.2s, background 0.2s}
+.link{display:flex;align-items:center;gap:10px;text-decoration:none;padding:14px 16px;border-radius:12px;margin:8px 0;background:var(--card);color:#fff;font-weight:600;transition:transform 0.2s, background 0.2s}
 .link:hover{transform:scale(1.03);background:rgba(255,255,255,0.1)}
+.link img{width:22px;height:22px;}
 .small{font-size:13px;color:rgba(255,255,255,0.65)}
 
 @media (max-width:420px){.hero{grid-template-columns:72px 1fr}.avatar{width:72px;height:72px}}
@@ -93,19 +96,30 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
     <div>
       <h1 class="title" id="name">Ahmet Tanriverdi</h1>
       <div class="sub" id="desc">
-        LOL: 102 saat / Roblox: 207 saat / Counter: 267 saat
+        LoL: 102 saat / Roblox: 207 saat / Counter: 267 saat
       </div>
       <div class="controls">
         <span class="small">Ben olabilirmisin, Mari??</span>
       </div>
     </div>
   </div>
+
+  <!-- Sosyal Medya Linkleri -->
   <div class="links" id="links">
-    <a class="link" href="https://open.spotify.com/" target="_blank">Spotify</a>
-    <a class="link" href="https://youtube.com/" target="_blank">YouTube</a>
-    <a class="link" href="https://soundcloud.com/" target="_blank">SoundCloud</a>
-    <a class="link" href="mailto:mail@example.com">İletişim</a>
+    <a class="link" href="https://instagram.com/ahmet.tanriverdiii" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="Instagram">
+      <span>@ahmet.tanriverdiii</span>
+    </a>
+    <a class="link" href="https://instagram.com/ahmet.tn7" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="Instagram">
+      <span>@ahmet.tn7</span>
+    </a>
+    <a class="link" href="https://x.com/AhmetUt65114282" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="X">
+      <span>@couple06</span>
+    </a>
   </div>
+
   <div style="padding:18px;text-align:center">
     <div class="small">© 2025 — Ahmet Tanriverdi</div>
   </div>
