--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
   background-size: cover;
   background-position: center;
   z-index:0;
-  animation:moveBG 20s ease-in-out infinite;
+  animation:moveBG 20s linear infinite;
 }
 @keyframes moveBG{
-  0%{transform:scale(1.05) translate(0, 0)}
-  25%{transform:scale(1.05) translate(-20px, 15px)}
-  50%{transform:scale(1.05) translate(20px, -10px)}
-  75%{transform:scale(1.05) translate(-15px, -20px)}
-  100%{transform:scale(1.05) translate(0, 0)}
+  0%{transform:scale(1) translate(0,0)}
+  25%{transform:scale(1.05) translate(-10px,10px)}
+  50%{transform:scale(1.05) translate(10px,-10px)}
+  75%{transform:scale(1.05) translate(-10px,-10px)}
+  100%{transform:scale(1) translate(0,0)}
 }
 
 /* Blur overlay */
@@ -49,7 +49,16 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
 }
 
 /* İçerik */
-.wrap{width:100%;max-width:760px;border-radius:18px;overflow:hidden;position:relative;background:linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.02));box-shadow:0 6px 30px rgba(0,0,0,0.6);}
+.wrap{
+  width:100%;
+  max-width:760px;
+  border-radius:18px;
+  overflow:hidden;
+  position:relative;
+  background:rgba(255,255,255,0.05);
+  box-shadow:0 6px 30px rgba(0,0,0,0.6);
+  backdrop-filter: blur(8px); /* 💫 Panel bulanıklığı eklendi */
+}
 .hero{position:relative;padding:28px 22px 18px 22px;display:grid;grid-template-columns:96px 1fr;gap:18px;align-items:center;animation:fadeUp 1s ease forwards;opacity:0;transform:translateY(20px);}
 @keyframes fadeUp{to{opacity:1;transform:translateY(0)}}
 .avatar{width:96px;height:96px;border-radius:50%;background-size:cover;background-position:center;border:3px solid rgba(255,255,255,0.06);}
@@ -57,9 +66,8 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
 .sub{font-size:14px;color:rgba(255,255,255,0.7);margin-top:6px}
 .controls{display:flex;flex-direction:column;gap:6px;align-items:flex-start;margin-top:10px}
 .links{display:flex;flex-direction:column;padding:18px;border-top:1px solid rgba(255,255,255,0.03)}
-.link{display:flex;align-items:center;gap:10px;text-decoration:none;padding:14px 16px;border-radius:12px;margin:8px 0;background:var(--card);color:#fff;font-weight:600;transition:transform 0.2s, background 0.2s}
+.link{display:block;text-decoration:none;padding:14px 16px;border-radius:12px;margin:8px 0;background:var(--card);color:#fff;font-weight:600;transition:transform 0.2s, background 0.2s}
 .link:hover{transform:scale(1.03);background:rgba(255,255,255,0.1)}
-.link img{width:22px;height:22px;}
 .small{font-size:13px;color:rgba(255,255,255,0.65)}
 
 @media (max-width:420px){.hero{grid-template-columns:72px 1fr}.avatar{width:72px;height:72px}}
@@ -96,7 +104,7 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
     <div>
       <h1 class="title" id="name">Ahmet Tanriverdi</h1>
       <div class="sub" id="desc">
-        LoL: 102 saat / Roblox: 207 saat / Counter: 267 saat
+        LOL: 102 saat / Roblox: 207 saat / Counter: 267 saat
       </div>
       <div class="controls">
         <span class="small">Ben olabilirmisin, Mari??</span>
@@ -104,20 +112,10 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
     </div>
   </div>
 
-  <!-- Sosyal Medya Linkleri -->
   <div class="links" id="links">
-    <a class="link" href="https://instagram.com/ahmet.tanriverdiii" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="Instagram">
-      <span>@ahmet.tanriverdiii</span>
-    </a>
-    <a class="link" href="https://instagram.com/ahmet.tn7" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="Instagram">
-      <span>@ahmet.tn7</span>
-    </a>
-    <a class="link" href="https://x.com/AhmetUt65114282" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="X">
-      <span>@couple06</span>
-    </a>
+    <a class="link" href="https://instagram.com/ahmet.tanriverdiii" target="_blank">📷 Instagram — ahmet.tanriverdiii</a>
+    <a class="link" href="https://instagram.com/ahmet.tn7" target="_blank">📷 Instagram — ahmet.tn7</a>
+    <a class="link" href="https://x.com/AhmetUt65114282" target="_blank">𝕏 X — couple06</a>
   </div>
 
   <div style="padding:18px;text-align:center">
