--- a/index.html
+++ b/index.html
@@ -1,178 +1,3 @@
-<!doctype html>
-<html lang="tr">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Ahmet Tanriverdi</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
-<style>
-:root{--bg:#0b0b0b;--card:rgba(255,255,255,0.06);--accent:#ff4757}
-*{box-sizing:border-box}
-html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;overflow-x:hidden}
-body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-content:center;padding:24px}
-
-/* Arka plan resmi tam ekran ve hareketli */
-.bg-img{
-  position: fixed;
-  inset:0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  z-index:0;
-  animation:moveBG 20s linear infinite;
-}
-@keyframes moveBG{
-  0%{transform:scale(1) translate(0,0)}
-  25%{transform:scale(1.05) translate(-10px,10px)}
-  50%{transform:scale(1.05) translate(10px,-10px)}
-  75%{transform:scale(1.05) translate(-10px,-10px)}
-  100%{transform:scale(1) translate(0,0)}
-}
-
-/* Blur overlay */
-#blurOverlay {
-  position: fixed;
-  inset:0;
-  background: rgba(0,0,0,0.7);
-  backdrop-filter: blur(8px);
-  z-index: 20;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:24px;
-  font-weight:700;
-  color:#fff;
-  cursor:pointer;
-  text-align:center;
-  transition: opacity 1.5s ease;
-}
-
-/* İçerik */
-.wrap{
-  width:100%;
-  max-width:760px;
-  border-radius:18px;
-  overflow:hidden;
-  position:relative;
-  background:rgba(255,255,255,0.05);
-  box-shadow:0 6px 30px rgba(0,0,0,0.6);
-  backdrop-filter: blur(8px);
-}
-.hero{position:relative;padding:28px 22px 18px 22px;display:grid;grid-template-columns:96px 1fr;gap:18px;align-items:center;animation:fadeUp 1s ease forwards;opacity:0;transform:translateY(20px);}
-@keyframes fadeUp{to{opacity:1;transform:translateY(0)}}
-.avatar{width:96px;height:96px;border-radius:50%;background-size:cover;background-position:center;border:3px solid rgba(255,255,255,0.06);}
-.title{font-weight:800;font-size:22px;margin:0}
-.sub{font-size:14px;color:#800000;margin-top:6px} /* Rozetler bordo */
-.controls{display:flex;flex-direction:column;gap:6px;align-items:flex-start;margin-top:10px}
-.controls .small{font-size:13px;color:#001f6b;font-weight:600;} /* Mari yazısı lacivert */
-
-/* Linkler */
-.links{display:flex;flex-direction:column;padding:18px;border-top:1px solid rgba(255,255,255,0.03)}
-.link{display:flex;align-items:center;gap:10px;text-decoration:none;padding:14px 16px;border-radius:12px;margin:8px 0;background:var(--card);color:#fff;font-weight:600;transition:transform 0.2s, background 0.2s}
-.link:hover{transform:scale(1.03);background:rgba(255,255,255,0.1)}
-.link img{width:22px;height:22px;}
-
-/* Alt yazı */
-.footer-text{font-size:13px;color:#FFD700;font-weight:600;} /* Gold */
-
-@media (max-width:420px){.hero{grid-template-columns:72px 1fr}.avatar{width:72px;height:72px}}
-
-/* Ses kontrol */
-#audioControl {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  background: rgba(0,0,0,0.4);
-  padding: 6px 10px;
-  border-radius: 12px;
-  cursor: pointer;
-  z-index:10;
-}
-#volumeSlider {width:0; transition: width 0.3s ease;}
-#audioControl:hover #volumeSlider {width:100px;}
-#volumeIcon {width:24px;height:24px;}
-
-/* Ziyaretçi sayacı */
-.visitor-counter {
-  position: fixed;
-  bottom: 10px;
-  right: 15px;
-  backdrop-filter: blur(6px);
-  background: rgba(0, 0, 0, 0.4);
-  color: gold;
-  padding: 6px 12px;
-  border-radius: 12px;
-  display: flex;
-  align-items: center;
-  font-family: 'Inter', sans-serif;
-  font-size: 15px;
-  gap: 6px;
-  z-index: 9999;
-  transition: transform 0.2s;
-}
-.visitor-counter:hover {
-  transform: scale(1.1);
-}
-.eye-icon {
-  width: 20px;
-  height: 20px;
-}
-</style>
-</head>
-<body>
-<!-- Arka plan -->
-<div id="bg" class="bg-img" style="background-image:url('assets/ahmet2.png')"></div>
-
-<!-- Blur overlay -->
-<div id="blurOverlay">Ekrana tıkla, Paşam</div>
-
-<div class="wrap">
-  <div class="hero">
-    <div class="avatar" id="avatar" style="background-image:url('assets/ahmet.png')"></div>
-    <div>
-      <h1 class="title" id="name">Ahmet Tanriverdi</h1>
-      <div class="sub" id="desc">
-        LOL: 102 saat / Roblox: 207 saat / Counter: 267 saat
-      </div>
-      <div class="controls">
-        <span class="small">Ben olabilirmisin, Mari??</span>
-      </div>
-    </div>
-  </div>
-
-  <div class="links" id="links">
-    <a class="link" href="https://instagram.com/ahmet.tanriverdiii" target="_blank">
-      <img src="https://img.icons8.com/ios-filled/50/ffffff/instagram-new.png"/> ahmet.tanriverdiii
-    </a>
-    <a class="link" href="https://instagram.com/ahmet.tn7" target="_blank">
-      <img src="https://img.icons8.com/ios-filled/50/ffffff/instagram-new.png"/> ahmet.tn7
-    </a>
-    <a class="link" href="https://x.com/AhmetUt65114282" target="_blank">
-      <img src="https://img.icons8.com/ios-filled/50/ffffff/twitterx.png"/> couple06
-    </a>
-    <a class="link" href="https://open.spotify.com/user/3ctawmw87ddsl1kj74agvldaa" target="_blank">
-      <img src="https://img.icons8.com/ios-filled/50/ffffff/spotify.png"/> Spotify
-    </a>
-  </div>
-
-  <div style="padding:18px;text-align:center">
-    <div class="footer-text">© 2025 — Ahmet Tanriverdi</div>
-  </div>
-
-  <!-- Müzik -->
-  <audio id="player" src="assets/amo-aller-amos.mp3" preload="auto" loop></audio>
-</div>
-
-<!-- Ses kontrol -->
-<div id="audioControl">
-  <img src="https://img.icons8.com/ios-glyphs/30/ffffff/speaker.png" id="volumeIcon"/>
-  <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="1">
-</div>
-
 <!-- Ziyaretçi sayacı -->
 <div class="visitor-counter">
   <svg class="eye-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="gold">
@@ -182,35 +7,15 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
 </div>
 
 <script>
-const player = document.getElementById('player');
-const volumeSlider = document.getElementById('volumeSlider');
-const blurOverlay = document.getElementById('blurOverlay');
-
-// Ses slider
-volumeSlider.addEventListener('input', () => { player.volume = volumeSlider.value; });
-
-// Blur overlay tıklama
-blurOverlay.addEventListener('click', () => {
-  blurOverlay.style.opacity='0';
-  setTimeout(()=>{blurOverlay.style.display='none';},1500);
-
-  // Müzik fade-in
-  player.volume = 0;
-  player.play();
-  let vol = 0;
-  const fadeInterval = setInterval(()=>{
-    if(vol<1){ vol+=0.02; if(vol>1) vol=1; player.volume=vol; } 
-    else { clearInterval(fadeInterval); }
-  },30);
-});
-
-// Ziyaretçi sayacı
 const countEl = document.getElementById("visitCount");
-fetch("https://api.countapi.xyz/update/ahmettanriverdi/visits/?amount=1")
+
+// Hit endpoint'i: her cihazdan giriş sayılır
+fetch("https://api.countapi.xyz/hit/ahmettanriverdi-global/visits")
   .then(res => res.json())
   .then(data => {
     countEl.innerText = 100 + data.value;
+  })
+  .catch(err => {
+    console.log("Sayaç API hatası:", err);
   });
 </script>
-</body>
-</html>
